// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker renders picker with pre-defined default colors 1`] = `
<div
  className="widget-color-picker widget-color-picker-picker"
/>
`;

exports[`ColorPicker renders the structure correctly 1`] = `
<div
  className="widget-color-picker widget-color-picker-picker"
>
  <Button
    color="#000000"
    disabled={false}
    mode="popover"
    onClick={[Function]}
  />
</div>
`;

exports[`ColorPicker that is disabled renders with the structure 1`] = `
<div
  className="widget-color-picker widget-color-picker-picker widget-color-picker-disabled"
>
  <Button
    color="#000000"
    disabled={true}
    mode="popover"
    onClick={[Function]}
  />
</div>
`;

exports[`ColorPicker with a mode as inline renders with the structure 1`] = `
<div
  className="widget-color-picker widget-color-picker-picker"
>
  <div
    className=""
  >
    <ColorPicker
      close={[Function]}
      color="#000000"
      disableAlpha={true}
      disabled={false}
      displayColorPicker={false}
      onChange={[Function]}
      onChangeComplete={[Function]}
      presetColors={
        Array [
          "#D0021B",
          "#F5A623",
          "#F8E71C",
          "#8B572A",
          "#7ED321",
          "#417505",
          "#BD10E0",
          "#9013FE",
          "#4A90E2",
          "#50E3C2",
          "#B8E986",
          "#000000",
          "#4A4A4A",
          "#9B9B9B",
          "#FFFFFF",
        ]
      }
      styles={Object {}}
      width={200}
    />
  </div>
</div>
`;

exports[`ColorPicker with a mode as popover or input renders with the structure 1`] = `
<div
  className="widget-color-picker widget-color-picker-picker"
>
  <Button
    color="#000000"
    disabled={false}
    mode="popover"
    onClick={[Function]}
  />
</div>
`;
